# zk-werewolf

./: .dockerignore  .env.example  .gitattributes  .gitignore  .terraformignore  .yarnrc.yml  CHAT_MESSAGE_SYSTEM.md  Cargo.toml  Makefile  PROJECT_EXECUTION_PLAN.md  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  integration_test.zsh  integration_test_node.zsh  integration_test_server.zsh  package-lock.json  package.json
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: deploy-contracts.yml  deploy.yml  lint.yaml  pr-check.yml  release.yml  test.yaml
.husky/: pre-commit
plan/: blockchain-flow.md  blockchain-integration.md
scripts/: common.sh  deploy-to-ecr.sh  update-ecs-service.sh
src/: assign.rs  lib.rs  main.rs  node.rs  proof.rs
src/assign/mental-poker/barnett-smart-card-protocol/: Cargo.toml
src/assign/proof-toolbox/proof-essentials/src/zkp/arguments/: mod.rs
src/assign/proof-toolbox/proof-essentials/src/zkp/arguments/matrix_elements_product/: proof.rs  prover.rs
src/assign/proof-toolbox/proof-essentials/src/zkp/arguments/partial_shuffle/: mod.rs  proof.rs  prover.rs  tests.rs
src/assign/proof-toolbox/proof-essentials/src/zkp/arguments/shuffle/: mod.rs  proof.rs  prover.rs  tests.rs
terraform/: .gitignore  .terraform.lock.hcl  README.md  alb.tf  ecr.tf  ecs.tf  ecs_services.tf  frontend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
terraform/environments/dev/: .gitignore  .sops.yaml  .terraform.lock.hcl  .terraformignore  README.md  main.tf  outputs.tf  secrets.enc.yaml  secrets.enc.yaml.example  terraform.tfvars.example  variables.tf
terraform/modules/alb/: main.tf
terraform/modules/ecr/: main.tf
terraform/modules/ecs-cluster/: main.tf
terraform/modules/ecs-service/: main.tf
terraform/modules/security-groups/: main.tf
terraform/modules/service-discovery/: main.tf
terraform/modules/sops-kms/: main.tf
terraform/modules/vpc/: main.tf
tests/: integration_test.rs
