[package]
name = "zk-werewolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
rand = "0.8.4"
ark-ff = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
thiserror = "1.0.30"
dusk-plonk = "0.13.1"
rand_core = {version="0.6", default-features=false}
dusk-jubjub = {version = "0.12", default-features = false}
itertools = "0.10.5"

[dependencies.proof-essentials]
path = "src/assign/proof-toolbox/proof-essentials"

[dependencies.starknet-curve]
path = "src/assign/proof-toolbox/starknet-curve"

[dependencies.barnett-smart-card-protocol]
path = "src/assign/mental-poker/barnett-smart-card-protocol"